grammar.bnf
<line> ::= [NUMBER] <statement> CR | CR

<statement> ::= PRINT <expr>
				IF <relexp> THEN <statement>
				GOTO NUMBER
				INPUT VAR
				LET VAR = <expr>
				GOSUB NUMBER
				RETURN
				END
				
<expr> ::= <term> [(+|-) <expr>]

<term> ::= <factor> [(*|/) <term>]

<factor> ::= VAR | NUMBER | ( <expr> )

<relexp> ::= <expr> <relop> <expr>

<relop> ::= > | = | <
